--- a/client/main.css
+++ b/client/main.css
@@ -6,6 +6,20 @@ body {
   max-width: 436px !important;
 }
 
+.modal-dialog.wide {
+  width: 1000px;
+  max-width: 1000px;
+}
+
+.bkg-grey{
+  background-color: #f6f6f6;
+}
+
+.bkg-grey .modal-content{
+  background-color: #f6f6f6;
+
+}
+
 h1, h2, h3, h4 {
   font-weight: lighter;
 }
